--- a/css/css.html
+++ b/css/css.html
@@ -91,7 +91,7 @@
                 <p>Thank you!</p>
             </em>
         </div>
-        <p id="video1"><video src="VDO/Welcome.mp4" width="320" height="240" controls>
+        <p id="video1"><video src="../VDO/Welcome.mp4" width="320" height="240" controls>
                 Video not supported.
             </video>
         </p>
