--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Passport Homepage</title>    
+<link rel="stylesheet" href="css/style.css">
+    <title>My passport homepage</title>
 </head>
+
 <body>
-     <h1 align="center">Hello! Welcome to my passport homepage</h1>
-     <center><img src="https://media.discordapp.net/attachments/891656860309004288/1148226117199732927/Pongarny.jpg?width=441&height=662" width="200" hight="100" alt="Puttipong Kamnerdpongpreeda Picture"/></center>
-     <div>
-        <p align="center">Name : Puttipong Kamnerdpongpreeda</p>
-        <p align="center">Nick name : Pong</p>
-        <h2 align="center"><mark>My Education</mark></h2>
-        <center>
-           <p>● Kindergarden = อนุบาลธรรมศาสตร์</p>
-           <p>● G1-G6 = สารสาสน์วิเทศคลองหลวง</p>
-           <p>● G7-G12 = สวนกุหลาบวิทยาลัยรังสิต</p>
-        </center>
-                <h3 align="center">สิ่งที่ชอบ : ความสนุกที่ได้ทำสิ่งใหม่ๆ </h3>
-                <h3 align="center">สิ่งที่ไม่ชอบ : ความล้มเหลวซ้ำไปซ้ำมา </h3>
-            <center>
-                    <q>Everyone lives by selling something. -Robert Louis Stevenson</q>
-                    <em><h1>Thank you! </h1></em>
-                    <video controls width="320" height="240">
-                        <source src="VDO/Welcome.mp4" type="video/mp4">
-            </center>
-
-                    
-     </div>
-
-     
+    <div id="all1">
+        <div id="group1">
+            <h1><u>Hello! Welcome to my passport homepage</u></h1>
+        </div>
+        <div id="group2">
+        <img
+        src="https://media.discordapp.net/attachments/891656860309004288/1148226117199732927/Pongarny.jpg?width=200&height=300">
+        </div>
+        <div id="group3">
+            <p>Name : Puttipong Kamnerdpongpreeda</p>
+            <p>Nickname : Pong </p>
+        </div>
+        <div id="group4">
+            <mark>My Education</mark>
+            <p>● Kindergarden = Kindergarden Thammasat School</p>
+            <p>● G1-G6 = Sarasas Withed Klongluang School</p>
+            <p>● G7-G12 = Suankularb Wittayalai Rangsit School</p>
+        </div>
+        <div id="group5">
+            <br><b>สิ่งที่ชอบ : ความสนุกที่ได้ทำสิ่งใหม่ๆ</b>
+            <b>
+                <p>สิ่งที่ไม่ชอบ : ความล้มเหลวซ้ำไปซ้ำมา</p>
+            </b>
+            <p>---------------------------------------------------------------------------------------------------------------------------
+            </p>
+        </div>
+        <div id="group6">
+            <br><q>Everyone lives by selling something. -Robert Louis Stevenson</q>
+            <em>
+                <p>Thank you!</p>
+            </em>
+        </div>
+        <p id="video1"><video src="../VDO/Welcome.mp4" width="320" height="240" controls>
+                Video not supported.
+            </video>
+        </p>
+    </div>
 </body>
+
 </html>
